--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
-<router-outlet></router-outlet>
+
+<div class="row">
+<div class="col-md-12">
+
+
+    <router-outlet></router-outlet>
+</div>
+
+</div>
+
+
