--- a/src/app/student/add/add.component.html
+++ b/src/app/student/add/add.component.html
@@ -9,23 +9,33 @@
             <div class="col-md-4 image-container"> 
                 <label class="hoverable" for="filess">
                     <img [src]="URL ? URL : defaultImga " alt="">
-             
                 </label>
                 <br>
                 <input type="file"  id="filess" accept=".png, .jpg, .jpeg"      class="select-profile-picture" (change)="selectProfile($event)"  >
+                <div  *ngIf="(alert?.['image']?.touched || submited) && alert?.['image']?.invalid "><small *ngIf="alert?.['image']?.errors?.['required'] "  class="text-danger">Please Uploade Image</small> </div>
             </div>
             <div class="col-md-4">
                 <label  for="name"  class="form-label"> First Name</label>
         
                 <input type="text"  placeholder="First Name"   formControlName="firstName"   class=" form-control" id="name">
+                <div *ngIf="(alert?.['firstName']?.touched ||submited) && alert?.['firstName']?.invalid" > 
+                    <small class="text-danger"  *ngIf="alert?.['firstName']?.errors?.['required']" >First Name required</small> 
+                </div>
             </div>
             <div class="col-md-4">
                 <label  for="last" class="form-label">Last Name</label>
                 <input type="text" class="form-control"   formControlName="lastName"   placeholder="Last Name" id="last">
+                <div *ngIf="(alert?.['lastName']?.touched ||submited) && alert?.['lastName']?.invalid" > 
+                    <small class="text-danger"  *ngIf="alert?.['lastName']?.errors?.['required']" >Last Name required</small> 
+                </div>
             </div>
             <div class="col-md-4">
                 <label for="email" class="form-label">Email</label>
                 <input type="email"  placeholder="Email"  formControlName="email"   class="form-control" id="email">
+                <div *ngIf="(alert?.['email']?.touched ||submited) && alert?.['email']?.invalid" > 
+                    <small class="text-danger"  *ngIf="alert?.['email']?.errors?.['email']" >Please enter valid Email </small> 
+                    <small class="text-danger"  *ngIf="alert?.['email']?.errors?.['required']" >Email required</small> 
+                </div>
             </div>
             <div class="col-md-4">
                 <label for="branchName"  class="form-label">Branch Name</label>
@@ -34,6 +44,9 @@
                     
                     <option  *ngFor="let item of branch"  [value]="item">{{item}}</option>
                 </select>
+                <div *ngIf="(alert?.['branchName']?.touched ||submited) && alert?.['branchName']?.invalid" > 
+                    <small class="text-danger"  *ngIf="alert?.['branchName']?.errors?.['required']" >Branch Name required</small> 
+                </div>
             </div>
             <div class="col-md-4">
                 <label  class="form-label">Year</label>
@@ -42,6 +55,10 @@
                     <option  *ngFor="let item of year"  [value]="item">{{item}}</option>
                  
                 </select>
+
+                <div *ngIf="(alert?.['year']?.touched ||submited) && alert?.['year']?.invalid" > 
+                    <small class="text-danger"  *ngIf="alert?.['year']?.errors?.['required']" >Year required</small> 
+                </div>
             </div>
            
         </div>
