--- a/src/app/student/list/list.component.html
+++ b/src/app/student/list/list.component.html
@@ -1,53 +1,68 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <img class="navbar-brand"  src="./../../../assets/student-logo-vector.jpg" style="width: 50px;">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" [routerLink]="['/student/add']" >Add student</a>
-          </li>
- 
-        </ul>
-       
+
+
+
+
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <img class="navbar-brand"  src="./../../../assets/student-logo-vector.jpg" style="width: 50px;">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" [routerLink]="['/student/add']" >Add student</a>
+            </li>
+   
+          </ul>
+         
+        </div>
+      </div>
+    </nav>
+  
+  
+    <!-- table containt -->
+
+    <div class="row">
+
+      <div class="col-md-12">
+
+        <table class="table">
+          <thead>
+              <tr>
+                  <th scope="col">Img</th>  
+                  <th scope="col">First Name</th>
+                  <th scope="col">Last Name</th>
+                  <th scope="col">Email</th>
+                  <th scope="col">Branch name</th>
+                  <th scope="col">Year</th>
+                  <th scope="col">Action</th>
+      
+              </tr>
+      
+          </thead>
+      
+          <tbody>
+              <tr *ngFor="let item of studentList">
+                  <td  scope="row">
+                    <img  src="{{item.image}}"  class="profile-Image">
+                  </td>
+                  <td  scope="row">{{item.firstName}}</td>
+                  <td  scope="row">{{item.lastName}}</td>
+                  <td  scope="row">{{item.email}}</td>
+                  <td  scope="row">{{item.branchName}}</td>
+                  <td  scope="row">{{item.year}}</td>
+                  <td>
+                    <button class="btn btn-secondary"><i class="fas fa-eye"></i></button>&nbsp;
+                    <button class="btn btn-primary" [routerLink]="['/student/edit/', item.id]"><i class="fas fa-edit"></i></button> &nbsp;
+                    <button  class="btn btn-danger" (click)="delete(item.id)" ><i class="fas fa-trash"></i></button> </td>
+              </tr>
+          </tbody>
+        </table>
+
       </div>
     </div>
-  </nav>
+  
 
 
-  <!-- table containt -->
-
-  <table class="table">
-    <thead>
-        <tr>
-            <th scope="col">Img</th>  
-            <th scope="col">First Name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Email</th>
-            <th scope="col">Branch name</th>
-            <th scope="col">Year</th>
-            <th scope="col">Action</th>
-
-        </tr>
-
-    </thead>
-
-    <tbody>
-        <tr *ngFor="let item of studentList">
-            <td  scope="row">
-              <img  src="{{item.image}}"  class="profile-Image">
-            </td>
-            <td  scope="row">{{item.firstName}}</td>
-            <td  scope="row">{{item.lastName}}</td>
-            <td  scope="row">{{item.email}}</td>
-            <td  scope="row">{{item.branchName}}</td>
-            <td  scope="row">{{item.year}}</td>
-            <td>
-              <button class="btn btn-secondary"><i class="fas fa-eye"></i></button>&nbsp;
-              <button class="btn btn-primary" [routerLink]="['/student/edit/', item.id]"><i class="fas fa-edit"></i></button> &nbsp;
-              <button  class="btn btn-danger" (click)="delete(item.id)" ><i class="fas fa-trash"></i></button> </td>
-        </tr>
-    </tbody>
-  </table>
